<resources>
    <string name="app_name">Social Saúde</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash_screen">Social Saúde</string>
    <string name="splash">Splash</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Nome</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_repeat_password">Repetir Senha</string>
    <string name="login">LOGIN</string>
    <string name="register">CADASTRAR</string>
    <string name="forgot_password"><u>Esqueci minha senha</u></string>
    <string name="request_new_password">Enviar nova senha por email</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to right menu -->
    <string name="menu_doctors">Médicos</string>
    <string name="menu_doctors_desc">Pesquise unidades de saúde pelo CRM ou nome do médico...
    </string>
    <string name="menu_specialties">Especialidades</string>
    <string name="menu_specialties_desc">Pesquise unidades de saúde a partir da especialidade
        desejada...
    </string>
    <string name="menu_upas">UPAs</string>
    <string name="menu_upas_desc">Encontre todas as UPAs próximas à você..</string>
    <string name="menu_pdss">Postos de Saúde</string>
    <string name="menu_pdss_desc">Encontre todos os Postos de Saúde próximos à você...</string>
    <string name="menu_medicines">Remédios</string>
    <string name="menu_medicines_desc">Localize unidades de saúde a partir da disponibilidade de
        medicamentos...
    </string>
    <string name="menu_hospitals">Hospitais</string>
    <string name="menu_hospitals_desc">Encontre todos os hospitais próximos à você...</string>

    <!-- Strings related to navigation menu -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_screen_ss">Social Saúde</string>
    <string name="title_activity_right_menu">Procurar por</string>
    <string name="title_activity_list">Médicos</string>
    <string name="title_activity_show">ShowActivity</string>
    <string name="title_activity_news">Notícias</string>

    <string name="item_title">IJF Fortaleza</string>
    <string name="item_desc">Próximo a igreja da Sé. Ao lado do Farias Brito
    </string>
    <string name="detail_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
    </string>
    <string name="detail_location">"Rua Frei Vidal, 1756 - São João do Tauape"</string>

    <string name="action_search">Procurar</string>
    <string name="voltar"><u>Voltar</u></string>
    <string name="type_email_for_new_password">Digite seu email para enviarmos uma nova senha:</string>
    <string name="API_URL">http://socialsaude.mybluemix.net/api/</string>

    <!-- Strings related to navigation menu -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <string name="minha_localizacao">Minha Localização</string>
</resources>
