<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.socialsaude.activity.RightMenuActivity"
    tools:showIn="@layout/activity_right_menu"
    android:orientation="vertical"
    android:layout_weight="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="0.33">

        <LinearLayout
            android:id="@+id/menuOption1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10px"
            android:layout_weight="0.5"
            android:background="@color/backgroundApp"
            android:orientation="vertical"
            android:weightSum="1"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:gravity="center|bottom"
                android:layout_gravity="bottom"
                android:fontFamily="sans-serif-thin"
                android:layout_weight="0.5"
                android:text="@string/menu_doctors"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:gravity="center"
                android:layout_gravity="bottom"
                android:layout_marginBottom="10px"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:layout_weight="0.5"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/menu_doctors_desc"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/menuOption2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10px"
            android:layout_weight="0.5"
            android:background="@color/backgroundApp"
            android:orientation="vertical"
            android:weightSum="1"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:textSize="27sp"
                android:gravity="center|bottom"
                android:layout_gravity="bottom"
                android:fontFamily="sans-serif-thin"
                android:layout_weight="0.5"
                android:text="@string/menu_specialties"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:gravity="center"
                android:layout_gravity="bottom"
                android:layout_marginBottom="10px"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:layout_weight="0.5"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/menu_specialties_desc"/>

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="0.33">

        <LinearLayout
            android:id="@+id/menuOption3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10px"
            android:layout_weight="0.5"
            android:background="@color/backgroundApp"
            android:orientation="vertical"
            android:weightSum="1"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:gravity="center|bottom"
                android:layout_gravity="bottom"
                android:fontFamily="sans-serif-thin"
                android:layout_weight="0.5"
                android:text="@string/menu_upas"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:gravity="center"
                android:layout_gravity="bottom"
                android:layout_marginBottom="10px"
                android:layout_weight="0.5"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/menu_upas_desc"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/menuOption4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10px"
            android:layout_weight="0.5"
            android:background="@color/backgroundApp"
            android:orientation="vertical"
            android:weightSum="1"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:gravity="center|bottom"
                android:layout_gravity="bottom"
                android:fontFamily="sans-serif-thin"
                android:layout_weight="0.5"
                android:text="@string/menu_pdss"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:gravity="center"
                android:layout_gravity="bottom"
                android:layout_marginBottom="10px"
                android:layout_weight="0.5"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/menu_pdss_desc"/>

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="0.33">

        <LinearLayout
            android:id="@+id/menuOption5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10px"
            android:layout_weight="0.5"
            android:background="@color/backgroundApp"
            android:orientation="vertical"
            android:weightSum="1"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:gravity="center|bottom"
                android:layout_gravity="bottom"
                android:fontFamily="sans-serif-thin"
                android:layout_weight="0.5"
                android:text="@string/menu_medicines"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:gravity="center"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="10px"
                android:layout_weight="0.5"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/menu_medicines_desc"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/menuOption6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10px"
            android:layout_weight="0.5"
            android:background="@color/backgroundApp"
            android:orientation="vertical"
            android:weightSum="1"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:gravity="center|bottom"
                android:layout_gravity="bottom"
                android:fontFamily="sans-serif-thin"
                android:layout_weight="0.5"
                android:text="@string/menu_hospitals"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:gravity="center"
                android:layout_gravity="bottom"
                android:layout_marginBottom="10px"
                android:layout_weight="0.5"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/menu_hospitals_desc"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
